--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -1,15 +1,16 @@
+.headerWrapper{
+    box-shadow: 0 3px 5px #ddd;
+    position: sticky;
+    top: 0;
+}
 .header{
-   box-shadow: 0x 3px 5px #0f0f0f;
-   -webkit-box-pack: end;
-   /* background: rgb(228, 219, 219); */
-   border-bottom: 1px solid #ddd;
    height: 60px;
    display: flex;
    justify-content: end;
    align-items: center;
    position: sticky;
    top: 0;
-   padding-right: 30px;
+   /* padding-right: 30px; */
    flex-direction: row-reverse;
 }
 
