--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -1,4 +1,11 @@
 .footer{
-    background-color: fuchsia;
-    text-align: center;
+    height: 200px;
+    display: flex;
+    align-content: center;
+    background-color: #333;
+}
+.footer h4{
+    margin: auto;
+    color: #fff;
+    
 }
