--- a/src/index.css
+++ b/src/index.css
@@ -20,5 +20,9 @@ h1,h2,h3,h4,h5,h6,p,ul{
 }
 
 .container{
-  padding: 0 30px;
+  padding: 0 40px;
+}
+a {
+  text-decoration: none;
+  color: #000;
 }
