--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -2,6 +2,7 @@
     box-shadow: 0 3px 5px #ddd;
     position: sticky;
     top: 0;
+    background-color: #ffffff;
 }
 .header{
    height: 60px;
@@ -23,6 +24,10 @@
 }
 
 .header ul li{
-    margin-right: 20px;
+    margin-left: 20px;
     cursor: pointer;
+}
+
+.header h3{
+    margin-left: 15px;
 }
