--- a/src/components/CreateArticle/CreateArticle.module.css
+++ b/src/components/CreateArticle/CreateArticle.module.css
@@ -1,37 +1,27 @@
 .ArticleWrapper{
-
-    height: 57vh;
+    height: 100vh;
 }
 
-.ArticleWrapper .parent{
-   display: grid;
-   grid-template-columns: repeat(2, 1fr);
-   column-gap: 30px;
-}
 .ArticleWrapper h4{
     margin:30px 0px 40px 0px;
     text-align: end;
 }
-
-.ArticleWrapper label{
-    margin-top: 10px;
-    display: block;
-    text-align: end;
+.ArticleWrapper .btnParent{
+    display: flex ;
+    justify-content: end;
 }
-
-.ArticleWrapper input{
-    text-align: end;
-    width: 100%;
-    margin: 10px 0px 0px 0px;
-    height: 30px;
-    box-shadow: 0px 4px 6px -1px #aaa;
-    border: none;
-    outline: none;
-    padding: 0px 10px;
-    box-sizing: border-box;
-    background-color: rgb(120, 120, 120);
-    background-color: rgb(90, 78, 255);
-    border-radius: 5px;
+.ArticleWrapper button{
+    background-color: rgb(77, 77, 249);
+    padding: 10px;
     color: #fff;
+    font-size: 17px;
+    border: none;
+    border-radius: 5px;
+    margin-top: 5px;
+    cursor: pointer;
+
 }
 
+.ArticleWrapper button:active{
+    background-color: rgb(255, 37, 37);
+}
