--- a/src/components/NOTFOUND/notFound.module.css
+++ b/src/components/NOTFOUND/notFound.module.css
@@ -1,14 +1,14 @@
-
-.loadingWrapper{
+.parentWrapper{
     position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
-    background-color: #000000;
-    opacity: 0.7;
+    left: 0;
+    background-color: rgb(237, 226, 226);
+    opacity: 0.5;
     display: flex;
-    color: #fff;
     justify-content: center;
     align-items: center;
+}
+.parentWrapper  h1{
+    font-size: 50px;
 }
