first react app completed

--- a/src/pages/Home/home.module.css
+++ b/src/pages/Home/home.module.css
@@ -1,10 +1,10 @@
 .homeWrapper{
-    
+    direction: rtl;
 }
 
 .homeWrapper .head4{
     margin-top: 40px;
-    text-align: end;
+    text-align: start;
     margin-bottom: 20px;
 }
 
